<resources>
    <string name="app_name">Grain Meter</string>
    <string name="send">Send</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="command">Command</string>
    <string name="hub_button">Send</string>
    <string name="temp">Get Temperature</string>
    <string name="humid">Get Humidity</string>
    <string name="disconnect">Disconnect</string>
    <string name="sensor_scan">Scan For Sensors</string>
    <string name="hub_scan">Scan For Hubs</string>
    <string name="no_connections">No sensors connected</string>
    <string name="clear">Clear</string>
    <string-array
        name="page_titles">
        <item>Sensors</item>
        <item>Hubs</item>
    </string-array>
    <string-array name="hub_commands">
        <item>Set portal number</item>
        <item>Set portal frequency</item>
        <item>Set logging frequency</item>
        <item>Set time</item>
        <item>Set date</item>
        <item>Set Critical Temperature</item>
        <item>Set Critical Humidity</item>
    </string-array>
</resources>
