<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/get_temp"
        android:onClick="specific_temp"
        android:text="@string/temp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/get_humid"
        android:layout_toEndOf="@+id/get_temp"
        android:onClick="specific_humid"
        android:text="@string/humid"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clear"
        android:layout_below="@+id/get_temp"
        android:text="@string/clear"
        android:onClick="clear_graph"/>
</RelativeLayout>